--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,35 +4,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorPrimary"
     tools:context="com.kachidoki.myselfview2.MainActivity">
 
-   <com.kachidoki.myselfview2.VolumControlBar
+   <!--<com.kachidoki.myselfview2.VolumControlBar-->
+       <!--android:layout_width="100dp"-->
+       <!--android:layout_height="100dp"-->
+       <!--android:layout_marginTop="20dp"-->
+       <!--app:bg="@mipmap/ic_launcher"-->
+       <!--app:circleWidth="12dp"-->
+       <!--app:dotCount="20"-->
+       <!--app:firstColor="#252420"-->
+       <!--app:secondColor="#FDFDFD"-->
+       <!--app:splitSize="25"-->
+       <!--/>-->
+
+
+   <!--<com.kachidoki.myselfview2.CustomImageView-->
+       <!--android:layout_width="wrap_content"-->
+       <!--android:layout_height="wrap_content"-->
+       <!--android:layout_margin="10dp"-->
+       <!--app:image="@mipmap/ic_launcher"-->
+       <!--app:imageScaleType="center"-->
+       <!--app:titleText="hello_android!"-->
+       <!--app:titleTextColor="#ff0000"-->
+       <!--app:titleTextSize="30sp"-->
+       <!--/>-->
+   <android.support.v7.widget.ActivityChooserView
        android:layout_width="200dp"
-       android:layout_height="200dp"
-       android:layout_marginTop="20dp"
-       app:bg="@mipmap/ic_launcher"
-       app:circleWidth="12dp"
-       app:dotCount="20"
-       app:firstColor="#252420"
-       app:secondColor="#FDFDFD"
-       app:splitSize="25"
-       />
+       android:layout_height="200dp">
 
-
-   <com.kachidoki.myselfview2.CustomImageView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_margin="10dp"
-       app:image="@mipmap/ic_launcher"
-       app:imageScaleType="center"
-       app:titleText="hello_android!"
-       app:titleTextColor="#ff0000"
-       app:titleTextSize="30sp"
-       />
+   </android.support.v7.widget.ActivityChooserView>
 
 </LinearLayout>
