--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,14 @@
        <!--app:titleTextSize="30sp"-->
        <!--/>-->
 
-   <com.kachidoki.myselfview2.SearchView
-       android:layout_width="150dp"
-       android:layout_height="150dp"/>
+   <!--<com.kachidoki.myselfview2.SearchView-->
+       <!--android:layout_width="150dp"-->
+       <!--android:layout_height="150dp"/>-->
+   
+   <com.kachidoki.myselfview2.MyImageView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:src="@drawable/img2"/>
 
 
 
